Moved navigation height to variables

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,3 +9,5 @@ $sponge_grey_dark: #2b2b2b;
 
 $sponge_headline_font: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $sponge_headline_weight: 700;
+
+$sponge_navigation_height: 4.063rem;
