--- a/styles/_tags.scss
+++ b/styles/_tags.scss
@@ -3,7 +3,7 @@ $tag-background-color: #f5f5f5;
 
 .tags {
   align-items: center;
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 
