--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,3 +2,8 @@
 @import "tags";
 @import "buttons";
 @import "cards";
+@import "forms";
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
